erDiagram
    %% =============================================================================
    %% ENTIDADES PRINCIPAIS
    %% =============================================================================
    
    projeto_investimento {
        TEXT idUnico PK
        TEXT nome
        TEXT descricao
        TEXT funcaoSocial
        TEXT metaGlobal
        TEXT cep
        TEXT endereco
        TEXT uf
        DATE dataInicialPrevista
        DATE dataFinalPrevista
        DATE dataInicialEfetiva
        DATE dataFinalEfetiva
        DATE dataCadastro
        DATE dataSituacao
        TEXT natureza
        TEXT naturezaOutras
        TEXT especie
        TEXT situacao
        TEXT descPlanoNacionalPoliticaVinculado
        TEXT observacoesPertinentes
        REAL qdtEmpregosGerados
        TEXT descPopulacaoBeneficiada
        REAL populacaoBeneficiada
        BOOLEAN isModeladaPorBim
    }
    
    instituicoes {
        TEXT codigo PK
        TEXT nome
        TEXT sigla
        TEXT tipo
    }
    
    eixos {
        TEXT id PK
        TEXT descricao
    }
    
    tipos {
        TEXT id PK
        TEXT descricao
        TEXT idEixo FK
    }
    
    subtipos {
        TEXT id PK
        TEXT descricao
        TEXT idTipo FK
    }
    
    fontes_de_recurso {
        INTEGER id PK
        TEXT idUnico FK
        TEXT origem
        REAL valorInvestimentoPrevisto
    }
    
    %% =============================================================================
    %% TABELAS DE RELACIONAMENTO (JUNCTION TABLES)
    %% =============================================================================
    
    projeto_tomadores {
        INTEGER id PK
        TEXT idUnico FK
        TEXT codigo FK
        TEXT nome
    }
    
    projeto_executores {
        INTEGER id PK
        TEXT idUnico FK
        TEXT codigo FK
        TEXT nome
    }
    
    projeto_repassadores {
        INTEGER id PK
        TEXT idUnico FK
        TEXT codigo FK
        TEXT nome
    }
    
    projeto_eixos {
        INTEGER projeto_id PK
        TEXT idUnico FK
        TEXT id FK
        TEXT descricao
    }
    
    projeto_tipos {
        INTEGER projeto_id PK
        TEXT idUnico FK
        TEXT id FK
        TEXT descricao
        TEXT idEixo
    }
    
    projeto_subtipos {
        INTEGER projeto_id PK
        TEXT idUnico FK
        TEXT id FK
        TEXT descricao
        TEXT idTipo
    }
    
    %% =============================================================================
    %% RELACIONAMENTOS
    %% =============================================================================
    
    %% Hierarquia de categorização
    eixos ||--o{ tipos : "contém"
    tipos ||--o{ subtipos : "contém"
    
    %% Projeto com fontes de recurso (one-to-many)
    projeto_investimento ||--o{ fontes_de_recurso : "tem"
    
    %% Projeto com instituições (many-to-many via junction tables)
    projeto_investimento ||--o{ projeto_tomadores : "recebe de"
    instituicoes ||--o{ projeto_tomadores : "é tomador"
    
    projeto_investimento ||--o{ projeto_executores : "executado por"
    instituicoes ||--o{ projeto_executores : "é executor"
    
    projeto_investimento ||--o{ projeto_repassadores : "repassa para"
    instituicoes ||--o{ projeto_repassadores : "é repassador"
    
    %% Projeto com classificações (many-to-many via junction tables)
    projeto_investimento ||--o{ projeto_eixos : "pertence a"
    eixos ||--o{ projeto_eixos : "classifica"
    
    projeto_investimento ||--o{ projeto_tipos : "tem tipo"
    tipos ||--o{ projeto_tipos : "categoriza"
    
    projeto_investimento ||--o{ projeto_subtipos : "tem subtipo"
    subtipos ||--o{ projeto_subtipos : "especifica"

